--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,9 +1,6 @@
 ---
 import HeaderLink from "@/components/HeaderLink.astro";
-import { TableOfContents } from "@lucide/astro";
 
-// TODO: Consideration
-// https://developer.chrome.com/docs/css-ui/sticky-headers
 type Props = {
   currentTitle?: string;
   currentHref?: string;
@@ -45,7 +42,21 @@ const { currentTitle } = Astro.props as Props;
           aria-label="Open table of contents"
           role="button"
           tabindex="0">
-          <TableOfContents aria-hidden="true" />
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            width="24"
+            height="24"
+            viewBox="0 0 24 24"
+            fill="none"
+            stroke="currentColor"
+            stroke-width="2"
+            stroke-linecap="round"
+            stroke-linejoin="round"
+            class="lucide lucide-table-of-contents-icon lucide-table-of-contents"
+            aria-hidden="true"
+            ><path d="M16 5H3"></path><path d="M16 12H3"></path><path d="M16 19H3"></path><path d="M21 5h.01"
+            ></path><path d="M21 12h.01"></path><path d="M21 19h.01"></path></svg
+          >
           <span class="sr-only">Contents</span>
         </label>
       </li>
