--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -5,7 +5,7 @@ import Footer from "@/components/Footer.astro";
 import FormattedDate from "@/components/FormattedDate.astro";
 import Header from "@/components/Header.astro";
 import type { MarkdownHeading } from "astro";
-import TableOfContents from "@lucide/astro/icons/table-of-contents";
+// Replaced lucide icon with inline SVG
 // import ScreenGlow from "@/components/ScreenGlow.astro";
 
 type Props = CollectionEntry<"blog">["data"] & { headings: MarkdownHeading[] };
@@ -74,7 +74,21 @@ for (const heading of filteredHeadings) {
           aria-label="Open table of contents"
           role="button"
           tabindex="0">
-          <TableOfContents aria-hidden="true" />
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            width="24"
+            height="24"
+            viewBox="0 0 24 24"
+            fill="none"
+            stroke="currentColor"
+            stroke-width="2"
+            stroke-linecap="round"
+            stroke-linejoin="round"
+            class="lucide lucide-table-of-contents-icon lucide-table-of-contents"
+            aria-hidden="true"
+            ><path d="M16 5H3"></path><path d="M16 12H3"></path><path d="M16 19H3"></path><path d="M21 5h.01"
+            ></path><path d="M21 12h.01"></path><path d="M21 19h.01"></path></svg
+          >
           <span class="sr-only">Contents</span>
         </label>
         <!-- Table of Contents -->
