--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -67,7 +67,7 @@ body {
 #nav-wrapper {
   flex-shrink: 0;
   position: fixed;
-  top: var(--sitePadding);
+  top: 0;
   transform: translateX(-50%);
   left: 50%;
   padding: 1.2rem 2.4rem;
