--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -24,7 +24,7 @@ html {
   color: var(--clrText);
   background-color: var(--clrBg);
   scroll-behavior: smooth;
-  scrollbar-gutter: stable both-edges;
+  scrollbar-gutter: stable;
 }
 @media (prefers-reduced-motion: reduce) {
   html {
@@ -39,37 +39,12 @@ body {
   font-size: 1.6rem;
   word-wrap: break-word;
   overflow-wrap: break-word;
-  padding-top: 9.2rem;
-  padding-inline: var(--sitePadding);
 }
-/* #screen-glow {
-  position: fixed;
-  inset: 0;
-  box-shadow: inset 0 0 5vw oklch(1 0 none / 0.1);
-  pointer-events: none;
-  z-index: 10001;
-} */
-/* body::after {
-  content: "";
-  position: fixed;
-  inset: 0;
-  background: linear-gradient(to bottom, transparent 50%, rgba(0, 0, 0, 0.3) 51%);
-  background-size: 100% 0.4rem;
-  animation: scanlines 1s steps(60) infinite;
-  z-index: 10000;
-  pointer-events: none;
-}
-@keyframes scanlines {
-  0% {
-    background-position: 0 0.4rem;
-  }
-} */
 #nav-wrapper {
   flex-shrink: 0;
-  position: fixed;
+  position: sticky;
   top: 0;
-  transform: translateX(-50%);
-  left: 50%;
+  margin: 0 auto;
   padding: 1.2rem 2.4rem;
   width: auto;
   max-width: min(var(--contentMaxWidth), calc(100% - (var(--sitePadding) * 2)));
@@ -138,6 +113,7 @@ main {
   gap: 1.6rem;
   width: 100%;
   margin: 0 auto;
+  padding-inline: var(--sitePadding);
   line-height: 1.6;
 }
 main > *:not(.gutter):not(.toc-aside) {
@@ -156,15 +132,10 @@ main > *:not(.gutter):not(.toc-aside) {
 }
 footer {
   flex-shrink: 0;
-  width: 100%;
-  max-width: var(--contentMaxWidth);
   margin: 0 auto;
   padding: 8rem var(--sitePadding) 12rem var(--sitePadding);
   text-align: center;
   color: var(--clrDetail);
-  border-top: 1px solid var(--clrBorder);
-  border-right: 1px solid var(--clrBorder);
-  border-left: 1px solid var(--clrBorder);
 }
 h1,
 h2,
