--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -38,7 +38,6 @@ for (const heading of filteredHeadings) {
   </head>
 
   <body>
-    <!-- <ScreenGlow /> -->
     <Header currentTitle={title} currentHref={Astro.url.pathname} />
     <main>
       <div class="gutter" aria-hidden="true"><!-- Fill Gutter --></div>
@@ -65,15 +64,7 @@ for (const heading of filteredHeadings) {
       </article>
       <aside class="toc-aside">
         <input type="checkbox" id="toc-toggle" class="toc-toggle" />
-        <label
-          for="toc-toggle"
-          class="toc-fab"
-          aria-controls="toc"
-          aria-expanded="false"
-          aria-haspopup="dialog"
-          aria-label="Open table of contents"
-          role="button"
-          tabindex="0">
+        <label for="toc-toggle" class="toc-fab" aria-controls="toc" aria-expanded="false" role="button">
           <svg
             xmlns="http://www.w3.org/2000/svg"
             width="24"
@@ -94,9 +85,7 @@ for (const heading of filteredHeadings) {
         <!-- Table of Contents -->
         <nav id="toc" aria-labelledby="toc-label">
           <h2 id="toc-label" class="sr-only">Table of contents</h2>
-          <label for="toc-toggle" class="toc-close" aria-label="Close table of contents" role="button" tabindex="0"
-            >Close</label
-          >
+          <label for="toc-toggle" class="toc-close" role="button">Close</label>
 
           {
             tocHeadings.length > 0 ? (
