--- a/src/pages/echoes/index.astro
+++ b/src/pages/echoes/index.astro
@@ -7,6 +7,7 @@ import Header from "@/components/Header.astro";
 import Footer from "@/components/Footer.astro";
 import FormattedDate from "@/components/FormattedDate.astro";
 import { SITE_DESCRIPTION, SITE_TITLE } from "@/consts";
+import Main from "@/components/Main.astro";
 
 const posts = (await getCollection("blog")).sort((a, b) => b.data.pubDate.valueOf() - a.data.pubDate.valueOf());
 // TODO Find nice layout for hero image previews
@@ -20,8 +21,7 @@ const posts = (await getCollection("blog")).sort((a, b) => b.data.pubDate.valueO
   <body>
     <!-- <ScreenGlow /> -->
     <Header />
-    <main>
-      <div class="gutter" aria-hidden="true"><!-- Fill Gutter --></div>
+    <Main>
       <h1 class="sr-only">Echoes</h1>
       <ol id="echoes-list">
         {
@@ -37,8 +37,7 @@ const posts = (await getCollection("blog")).sort((a, b) => b.data.pubDate.valueO
           ))
         }
       </ol>
-      <div class="gutter" aria-hidden="true"><!-- Fill Gutter --></div>
-    </main>
+    </Main>
     <Footer />
   </body>
 </html>
