--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,6 +4,7 @@ import BaseHead from "@/components/BaseHead.astro";
 import Header from "@/components/Header.astro";
 import Footer from "@/components/Footer.astro";
 import { SITE_DESCRIPTION, SITE_TITLE } from "@/consts";
+import Main from "@/components/Main.astro";
 ---
 
 <!doctype html>
@@ -14,8 +15,7 @@ import { SITE_DESCRIPTION, SITE_TITLE } from "@/consts";
   <body>
     <!-- <ScreenGlow /> -->
     <Header />
-    <main>
-      <div class="gutter" aria-hidden="true"><!-- Fill Gutter --></div>
+    <Main>
       <div id="index-splash">
         <h1 class="sr-only">DEVOID</h1>
         <pre
@@ -29,8 +29,7 @@ import { SITE_DESCRIPTION, SITE_TITLE } from "@/consts";
 ████████▀    ██████████  ▀██████▀   ▀██████▀  █▀   ████████▀
 				</pre>
       </div>
-      <div class="gutter" aria-hidden="true"><!-- Fill Gutter --></div>
-    </main>
+    </Main>
     <Footer />
   </body>
 </html>
