Derender toc trigger outside of post pages

--- a/src/pages/echoes/index.astro
+++ b/src/pages/echoes/index.astro
@@ -27,7 +27,7 @@ const posts = (await getCollection("blog")).sort((a, b) => b.data.pubDate.valueO
         {
           posts.map((post) => (
             <li>
-              <a href={`/echoes/${post.id}/`}>
+              <a href={`/echoes/${post.id}/`} data-astro-prefetch>
                 <span>
                   <FormattedDate date={post.data.pubDate} />
                 </span>
