--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -7,6 +7,7 @@ type Props = {
 };
 
 const { currentTitle } = Astro.props as Props;
+const isEchoesPost = /^\/echoes\/.+/.test(Astro.url.pathname);
 ---
 
 <header id="site-header">
@@ -34,26 +35,36 @@ const { currentTitle } = Astro.props as Props;
           </Fragment>
         )
       }
-      <li class="toc-nav-btn">
-        <label for="toc-toggle" class="toc-nav-toggle" aria-controls="toc" aria-expanded="false" role="button">
-          <svg
-            xmlns="http://www.w3.org/2000/svg"
-            width="24"
-            height="24"
-            viewBox="0 0 24 24"
-            fill="none"
-            stroke="currentColor"
-            stroke-width="2"
-            stroke-linecap="round"
-            stroke-linejoin="round"
-            class="lucide lucide-table-of-contents-icon lucide-table-of-contents"
-            aria-hidden="true"
-            ><path d="M16 5H3"></path><path d="M16 12H3"></path><path d="M16 19H3"></path><path d="M21 5h.01"
-            ></path><path d="M21 12h.01"></path><path d="M21 19h.01"></path></svg
-          >
-          <span class="sr-only">Contents</span>
-        </label>
-      </li>
+      {
+        isEchoesPost && (
+          <li class="toc-nav-btn">
+            <label for="toc-toggle" class="toc-nav-toggle" aria-controls="toc" aria-expanded="false" role="button">
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                width="24"
+                height="24"
+                viewBox="0 0 24 24"
+                fill="none"
+                stroke="currentColor"
+                stroke-width="2"
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                class="lucide lucide-table-of-contents-icon lucide-table-of-contents"
+                aria-hidden="true">
+                <>
+                  <path d="M16 5H3" />
+                  <path d="M16 12H3" />
+                  <path d="M16 19H3" />
+                  <path d="M21 5h.01" />
+                  <path d="M21 12h.01" />
+                  <path d="M21 19h.01" />
+                </>
+              </svg>
+              <span class="sr-only">Contents</span>
+            </label>
+          </li>
+        )
+      }
     </ul>
     <div class="nhs" aria-hidden="true"></div>
   </nav>
